--- a/src/main/webapp/resources/css/login.css
+++ b/src/main/webapp/resources/css/login.css
@@ -1,6 +1,113 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap');
 
 
+.frame-btn2 {
+  line-height: 35px;
+  display: inline-block;
+  padding: 25px 30px;
+  font-size: 15px;
+  letter-spacing: 3px;
+  text-decoration: none;
+  position: relative;
+  width: 370px
+}
+.frame-btn2__text {
+  color: #00ffff;
+  font-weight: bold;
+  text-transform: uppercase;
+  transition: 300ms ease;
+  position: relative;
+}
+.frame-btn2:hover .frame-btn2__text {
+  color: white;
+}
+.frame-btn2__solid {
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 10px;
+  background-color: #00ffff;
+  width: calc(100% - (5px * 4));
+  height: calc(100% - (5px * 4));
+  transform-origin: 50%;
+  transform: scale(0.85);
+  opacity: 0;
+  transition: 500ms cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+.frame-btn2:hover .frame-btn2__solid {
+  opacity: 1;
+  transform: scale(1);
+}
+.frame-btn2__outline {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.frame-btn2__outline--tall {
+  margin: 0 5px;
+  width: calc(100% - (5px * 2));
+  height: 100%;
+}
+.frame-btn2__outline--flat {
+  margin: 5px 0;
+  height: calc(100% - (5px * 2));
+  width: 100%;
+}
+.frame-btn2__line {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+.frame-btn2__line--tall:before, .frame-btn2__line--tall:after {
+  height: 100%;
+  width: 1px;
+  top: 0;
+ 
+}
+.frame-btn2:hover .frame-btn2__outline--flat .frame-btn2__line--tall:before, .frame-btn2:hover .frame-btn2__outline--flat .frame-btn2__line--tall:after {
+  transform: scaleY(0);
+}
+.frame-btn2:hover .frame-btn2__outline--tall .frame-btn2__line--tall:before, .frame-btn2:hover .frame-btn2__outline--tall .frame-btn2__line--tall:after {
+  margin: 5px 0;
+  height: calc(100% - (5px * 2));
+}
+.frame-btn2__line--tall:before {
+  left: 0;
+}
+.frame-btn2__line--tall:after {
+  right: 0;
+}
+.frame-btn2__line--flat:before, .frame-btn2__line--flat:after {
+  width: 100%;
+  height: 1px;
+  left: 0;
+}
+.frame-btn2:hover .frame-btn2__outline--tall .frame-btn2__line--flat:before, .frame-btn2:hover .frame-btn2__outline--tall .frame-btn2__line--flat:after {
+  transform: scaleX(0);
+}
+.frame-btn2:hover .frame-btn2__outline--flat .frame-btn2__line--flat:before, .frame-btn2:hover .frame-btn2__outline--flat .frame-btn2__line--flat:after {
+  margin: 0 5px;
+  width: calc(100% - (5px * 2));
+}
+.frame-btn2__line--flat:before {
+  top: 0;
+}
+.frame-btn2__line--flat:after {
+  bottom: 0;
+}
+.frame-btn2__line:before, .frame-btn2__line:after {
+  content: "";
+  display: block;
+  position: absolute;
+  background-color: #00ffff;
+  transition: 800ms cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+.frame-btn2:hover .frame-btn2__line:before, .frame-btn2:hover .frame-btn2__line:after {
+  transition: 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
 
 
 /**
@@ -14,6 +121,10 @@ a {
 
 
 body{
+	background-image: url("earth.jpg");
+
+	  background-size: cover;
+	background-color:black;
 		display: flex;
 	justify-content: center;
 }
@@ -47,19 +158,20 @@ button {
 	margin-bottom:-10px;
 	top: 200px;
 	width: 150px;
+	color: white;
 }
 
 
 
 
 .mainText:hover {
-	background-color: black;
-	color: white;
+	background-color:white ;
+	color: black;
 	transition: width 1000ms ease-in, background-color 1000ms ease-in;
 }
 
 .mainText2{
-	
+	color: white;
 	font-family: 'Song Myung', serif;
 }
 
@@ -80,6 +192,7 @@ button {
 	margin-top: 20px;
 	display: flex;
 	justify-content: center;
+	color: white;
 
 }
 
@@ -90,10 +203,10 @@ button {
 	 margin-bottom: 28px;
 	width:430px;
 	border-radius:10px;
-	color: #9b0b0b;
+	color: white;
 	font-weight: lighter;
 	height: 30px;
-	background-color: #e4c4c4;
+	background-color: black;
 }
 
 
