--- a/src/main/webapp/resources/css/regist.css
+++ b/src/main/webapp/resources/css/regist.css
@@ -1,3 +1,123 @@
+
+
+
+
+.frame-btn2 {
+  line-height: 35px;
+  display: inline-block;
+  padding: 25px 30px;
+  font-size: 15px;
+  letter-spacing: 3px;
+  text-decoration: none;
+  position: relative;
+  width: 370px
+}
+.frame-btn2__text {
+  color: #00ffff;
+  font-weight: bold;
+  text-transform: uppercase;
+  transition: 300ms ease;
+  position: relative;
+}
+.frame-btn2:hover .frame-btn2__text {
+  color: white;
+}
+.frame-btn2__solid {
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 10px;
+  background-color: #00ffff;
+  width: calc(100% - (5px * 4));
+  height: calc(100% - (5px * 4));
+  transform-origin: 50%;
+  transform: scale(0.85);
+  opacity: 0;
+  transition: 500ms cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+.frame-btn2:hover .frame-btn2__solid {
+  opacity: 1;
+  transform: scale(1);
+}
+.frame-btn2__outline {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.frame-btn2__outline--tall {
+  margin: 0 5px;
+  width: calc(100% - (5px * 2));
+  height: 100%;
+}
+.frame-btn2__outline--flat {
+  margin: 5px 0;
+  height: calc(100% - (5px * 2));
+  width: 100%;
+}
+.frame-btn2__line {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+.frame-btn2__line--tall:before, .frame-btn2__line--tall:after {
+  height: 100%;
+  width: 1px;
+  top: 0;
+ 
+}
+.frame-btn2:hover .frame-btn2__outline--flat .frame-btn2__line--tall:before, .frame-btn2:hover .frame-btn2__outline--flat .frame-btn2__line--tall:after {
+  transform: scaleY(0);
+}
+.frame-btn2:hover .frame-btn2__outline--tall .frame-btn2__line--tall:before, .frame-btn2:hover .frame-btn2__outline--tall .frame-btn2__line--tall:after {
+  margin: 5px 0;
+  height: calc(100% - (5px * 2));
+}
+.frame-btn2__line--tall:before {
+  left: 0;
+}
+.frame-btn2__line--tall:after {
+  right: 0;
+}
+.frame-btn2__line--flat:before, .frame-btn2__line--flat:after {
+  width: 100%;
+  height: 1px;
+  left: 0;
+}
+.frame-btn2:hover .frame-btn2__outline--tall .frame-btn2__line--flat:before, .frame-btn2:hover .frame-btn2__outline--tall .frame-btn2__line--flat:after {
+  transform: scaleX(0);
+}
+.frame-btn2:hover .frame-btn2__outline--flat .frame-btn2__line--flat:before, .frame-btn2:hover .frame-btn2__outline--flat .frame-btn2__line--flat:after {
+  margin: 0 5px;
+  width: calc(100% - (5px * 2));
+}
+.frame-btn2__line--flat:before {
+  top: 0;
+}
+.frame-btn2__line--flat:after {
+  bottom: 0;
+}
+.frame-btn2__line:before, .frame-btn2__line:after {
+  content: "";
+  display: block;
+  position: absolute;
+  background-color: #00ffff;
+  transition: 800ms cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+.frame-btn2:hover .frame-btn2__line:before, .frame-btn2:hover .frame-btn2__line:after {
+  transition: 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+button {
+	padding: 0;
+	overflow: visible;
+	background: none;
+	border: none;
+	border-radius: 0;
+	-webkit-appearance: none;
+}
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap');
 /**
 
@@ -76,7 +196,9 @@ a {
 	text-decoration: none;
 }
 
-body{
+body{background-image: url("earth.jpg");
+
+	  background-size: cover;
 		display: flex;
 	justify-content: center;
 }
@@ -103,6 +225,7 @@ height:420px;
 	margin-left:185px;
 	top: 200px;
 	width: 130px;
+	color: #00ffff;
 }
 
 .mainText2 {
@@ -112,6 +235,7 @@ height:420px;
 	left: 0%;
 	top: 200px;
 	font-style: initial;
+	color: #00ffff;
 }
 
 
@@ -145,16 +269,19 @@ height:420px;
 }
 
 .errorMsg {
+	border: none; 
+    background: transparent;
 	font-family: 'Song Myung', serif;
 	margin-bottom:28px;
 	padding-top:10px;
 	 margin-left:35px;
 	width:430px;
 	border-radius:10px;
-	color: #9b0b0b;
+	color: red;
 	font-weight: lighter;
 	height: 50px;
 	background-color: #e4c4c4;
+	border: 1px solid red;
 }
 
 .regex{
