--- a/src/main/webapp/resources/css/login.css
+++ b/src/main/webapp/resources/css/login.css
@@ -121,7 +121,7 @@ a {
 
 
 body{
-	background-image: url("earth.jpg");
+/* 	background-image: url("earth.jpg"); */
 
 	  background-size: cover;
 	background-color:black;
@@ -172,6 +172,7 @@ button {
 }
 
 .mainText2{
+		font-size: large;
 	color: #00ffff;
 	font-family: 'Song Myung', serif;
 }
@@ -194,6 +195,7 @@ button {
 	display: flex;
 	justify-content: center;
 	color: #00ffff;
+		font-size: medium;
 
 }
 
@@ -337,7 +339,8 @@ button {
       text-align: center;
     }
     .input-ty1 {
-    
+     font-size: large;
+     color:#00ffff;
     border: none; 
     background: transparent;
       display: inline-block;
@@ -349,7 +352,11 @@ button {
       padding: 8px;
       box-sizing: border-box;
     }
-  
+    .input-ty1::placeholder {
+    
+    color:#00ffff;
+    font-size: large;
+    }
     
     .highlight {
     
