--- a/src/main/webapp/resources/css/regist.css
+++ b/src/main/webapp/resources/css/regist.css
@@ -201,7 +201,7 @@ a {
 
 body{
 /* 	background-image: url("earth.jpg"); */
-   
+    overflow: inherit;
 	  background-size: 1500px;
 		display: flex;
 	justify-content: center;
