--- a/src/main/webapp/resources/css/goodsEnroll.css
+++ b/src/main/webapp/resources/css/goodsEnroll.css
@@ -18,7 +18,7 @@ body {
 /*   background-image:url(../css/earth.jpg);
   background-size: cover; */
 
-  background-color: var(--black);
+  background-color: var(--white);
 }
 
 .input-ty1 {
@@ -65,7 +65,7 @@ body {
   width: 100%;
   height: 150px;
   border-radius: 100px;
-  background-color: white;
+  background-color: black;
 }
 
 .text-block {
@@ -75,7 +75,7 @@ body {
   height: 100%;
   display: grid;
   place-items: center;
-  background-color: var(--black);
+  background-color: var(--white);
 }
 .text-block h1 {
   font-family: "Raleway", sans-serif;
@@ -86,7 +86,7 @@ body {
   position: relative;
   perspective: 500px;
   transform-style: preserve-3d;
-  color: var(--white);
+  color: var(--black);
 }
 .text-block h1::after {
   content: "";
